--- a/src/app/member/components/main-form-step-1/main-form-step-1.component.html
+++ b/src/app/member/components/main-form-step-1/main-form-step-1.component.html
@@ -15,7 +15,7 @@
   <div class="d-grid mt-4">
     <div class="row justify-content-end">
       <div class="col-auto">
-        <button class="btn btn-outline-secondary btn-lg px-4" (click)="onNext()">Suivant</button>
+        <button [disabled]="!stepperContentService.membershipInfoSaved || !stepperContentService.personalInfoSaved" class="btn btn-outline-secondary btn-lg px-4" (click)="onNext()">Suivant</button>
       </div>
     </div>
   </div>
