--- a/src/app/member/components/contact-info/contact-info.component.html
+++ b/src/app/member/components/contact-info/contact-info.component.html
@@ -143,7 +143,7 @@
 
     <!-- Submit Button -->
     <div *ngIf="!stepperDataService.contactInfoSaved" class="d-flex justify-content-end mt-4">
-      <button class="btn btn-outline-success" (click)=" onSave()"><i class="bi bi-floppy2"></i> Enregister</button>
+      <button class="btn btn-outline-success" [disabled]="contactFormGroup.invalid" (click)=" onSave()"><i class="bi bi-floppy2"></i> Enregister</button>
     </div>
     <div *ngIf="stepperDataService.contactInfoSaved" class="d-flex justify-content-end mt-4">
       <button class="btn btn-outline-success" (click)=" onModify()"><i class="bi bi-floppy2"></i> Modifier</button>
