--- a/src/app/member/components/contact-info/contact-info.component.html
+++ b/src/app/member/components/contact-info/contact-info.component.html
@@ -127,7 +127,8 @@
               </div>
 
               <div class="col-md-6">
-                <button type="button" class="btn btn-danger mt-4" (click)="removePersonToCall(i)" [disabled]="i==0 || stepperDataService.contactInfoSaved">
+                <button type="button" class="btn btn-danger mt-4" (click)="removePersonToCall(i)"
+                        [disabled]="i==0 || stepperDataService.contactInfoSaved">
                   Supprimer
                 </button>
               </div>
@@ -135,7 +136,8 @@
             <hr/>
           </div>
         </div>
-        <button [disabled]="personToCalls.length>=2 || stepperDataService.contactInfoSaved" type="button" class="btn btn-outline-success"
+        <button [disabled]="personToCalls.length>=2 || stepperDataService.contactInfoSaved" type="button"
+                class="btn btn-outline-success"
                 (click)="addPersonToCall()">Ajouter une personne
         </button>
       </div>
@@ -143,10 +145,13 @@
 
     <!-- Submit Button -->
     <div *ngIf="!stepperDataService.contactInfoSaved" class="d-flex justify-content-end mt-4">
-      <button class="btn btn-outline-success" [disabled]="contactFormGroup.invalid" (click)=" onSave()"><i class="bi bi-floppy2"></i> Enregister</button>
+      <button class="btn btn-outline-success" [disabled]="contactFormGroup.invalid" (click)=" onSave()"><i
+        class="bi bi-floppy2"></i> Enregister
+      </button>
     </div>
     <div *ngIf="stepperDataService.contactInfoSaved" class="d-flex justify-content-end mt-4">
       <button class="btn btn-outline-success" (click)=" onModify()"><i class="bi bi-floppy2"></i> Modifier</button>
     </div>
   </form>
+
 </div>
