--- a/src/app/member/components/member-details/member-details.component.css
+++ b/src/app/member/components/member-details/member-details.component.css
@@ -1,50 +1,23 @@
-/* member-detail.component.css */
-.member-container {
-  width: 80%;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #f8f9fa;
+.container {
+  max-width: 900px;
+}
+
+.card {
+  border-radius: 10px;
+}
+
+.accordion-button {
+  font-weight: bold;
+  color: #333;
+}
+
+.accordion-body {
+  background: #f9f9f9;
+  border: 1px solid #e0e0e0;
   border-radius: 8px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-}
-
-h2 {
-  text-align: center;
-  color: #343a40;
-  margin-bottom: 20px;
-}
-
-.section {
-  background-color: #ffffff;
   padding: 20px;
-  margin-bottom: 20px;
-  border-radius: 8px;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
 }
 
-.section h3 {
-  color: #278F8F;
-  border-bottom: 2px solid #278F8F;
-  padding-bottom: 10px;
-  margin-bottom: 20px;
-}
-
-.section p {
-  margin: 0 0 10px;
-}
-
-.section ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-.section ul li {
-  background-color: #f1f1f1;
-  padding: 10px;
-  margin-bottom: 5px;
-  border-radius: 4px;
-}
-
-strong {
-  color: #343a40;
+.btn {
+  border-radius: 5px;
 }
